# AndroidImageConverter

./: .gitignore  README.md  build-lib.sh  settings.gradle
.circleci/: config.yml
.github/workflows/: build.yml  main.yml
app/: build.gradle
app/src/androidTest/java/ekutt/example/imageconverter/: ImageConvertInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android_wrapper/: CMakeLists.txt  Image_jni.cpp  Image_jni.h
app/src/main/cpp/image/: CMakeLists.txt
app/src/main/cpp/image/include/image/: defs.h  image.h  jpeg.h  tiff.h
app/src/main/cpp/image/src/: image.cpp  jpeg.cpp  tiff.cpp
app/src/main/java/com/ekutt/example/imageconverter/: ImageConverter.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ekutt/example/imageconverter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
